fix spacing

--- a/src/components/Project/project.module.css
+++ b/src/components/Project/project.module.css
@@ -32,7 +32,6 @@
   margin-top: 16px;
   font-size: 15px;
   flex-wrap: wrap;
-  margin-bottom: 16px;
 }
 
 .tagContainer {
@@ -128,5 +127,8 @@
   }
   .buttons {
     flex-direction: row;
+  }
+  .tags {
+    margin-bottom: 16px;
   }
 }
